src/css/site.css
/* ... */
.index h2 {
    margin-top: 10px;
    color: rgba(0, 0, 0, .8);
    font-size: 16px;
    line-height: 26px;
    font-weight: normal;
}
.index h3 {
    margin-top: 20px;
    font-size: 14px;
    font-style: italic;
}
.index .download-link {
    margin: 40px 0 20px;
}
.index .download-link .btn {
    padding: 15px 35px;
    border: 0;
    font-size: 22px;
    opacity: 1;
}
.index .version-text {
    color: rgba(0, 0, 0, .6);
    font-size: 12px;
}
.index .learn-more {
    margin-top: 20px;
    font-weight: bold;
    color: rgba(79, 190, 186, 1);
}
.index .learn-more a,
.index .learn-more a:hover,
.index .learn-more a:active {
    color: #50c1e9 !important;
    text-decoration: none;
}
.index .learn-more .icon {
    font-weight: bold;
    font-size: 16px;
}
@media (max-width: 767px) {
    .index {
        padding-top: 0;
        min-height: 600px;
    }
    .index .download-link .btn {
        padding: 15px;
    }
}
/* ----------------------------------
 * social
 * ---------------------------------- */
.social {
    position: relative;
    margin-top: -100px;
    margin-bottom: 0;
    padding: 40px 5px;
    height: 99px;
    text-align: center;
    background: rgba(255, 255, 255, .7) url(../img/divider.png) no-repeat 50% 100%;
}
.social li {
    height: 30px;
    display: inline-block;
    vertical-align: top;
}
.social a {
    color: #50c1e9 !important;
}
.social .github-watch {
    width: 105px;
}
.social .github-fork {
    width: 105px;
}
.social .twitter-share {
    width: 80px;
    margin-right: 10px;
}
.social .twitter-follow {
    width: 200px;
}
/* ----------------------------------
 * desc
 * ---------------------------------- */
.desc {
    text-align: center;
    background-color: rgba(255, 255, 255, 1);
}
.desc a {
    color: rgba(79, 190, 186, 1);
}
.desc a:hover,
.desc a:active {
    color: #50c1e9;
    text-decoration: none;
}
.desc .desc__introduces {
    border-top: 1px dashed #AAB2BD ;
}
.desc .desc__introduces:first-child {
    border-top: none;
}
.desc .desc__introduces h3,
.desc .desc__introduces p {
    margin: 0 auto;
}
.desc .desc__introduces h3 {
    padding: 20px 0 14px;
    max-width: 900px;
    font-size: 28px;
}
.desc .desc__introduces p {
    padding-bottom: 40px;
    max-width: 900px;
    font-size: 18px;
    color: #888;
}
.desc .desc__introduces .photo--responsive img {
    width: 100%;
}
.desc .desc__features {
    margin: 70px auto;
    text-align: left;
}
.desc .desc__features .row {
    margin-bottom: 70px;
}
.desc .desc__features .col-md-6 {
    padding-left: 247px;
    min-height: 200px;
    text-align: left;
}
.desc .desc__features .features__photo {
    position: absolute;
    top: 0;
    left: 0;
}
.desc .desc__features h4 {
    font-size: 20px;
    margin-bottom: 10px;
}
.desc .desc__features p {
    font-size: 16px;
    color: #888;
    line-height: 26px;
}
@media (max-width: 767px) {
    .desc .desc__introduces h3 {
        padding-top: 20px;
        text-align: left;
    }
    .desc .desc__introduces p {
        text-align: left;
    }
    .desc .desc__features {
        margin-top: 20px;
    }
    .desc .desc__features .row {
        margin-bottom: 20px;
    }
    .desc .desc__features .row p {
        padding-bottom: 20px;
        text-align: left;
    }
    .desc .desc__features .features__photo {
        position: static;
    }
    .desc .desc__features .col-md-6 {
        padding: 0 15px;
        text-align: center;
    }
}
/* ----------------------------------
 * docs
 * ---------------------------------- */
.docs-header {
    padding-top: 50px;
    border-top: 1px solid #50c1e9;
    background-color: rgba(42, 110, 187, 0.6);
}
.docs-header.header--noBackground {
    background: none;
}
@media (max-width: 768px) {
    .docs-header {
        padding-top: 0;
    }
}
/* ----------------------------------
 * advertisement
 * ---------------------------------- */
.advertisement {
  width: auto !important;
  padding: 10px !important;
  overflow: hidden; /* clearfix */
  font-size: 13px !important;
  line-height: 18px !important;
  text-align: left;
  background: #50c1e9 !important;
  border: 0 !important;
  border-radius: 4px;
  box-shadow: inset 0 3px 5px rgba(0,0,0,.075);
  height: 121px;
}
.advertisement-image {
  margin: 0 !important;
  position: absolute;
}
.advertisement-text {
  margin-left: 100px !important;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
}
.advertisement-text a {
  color: #fff !important;
}
@media (max-width: 767px) {
  .advertisement {
    position: static;
    margin-top: 30px;
    box-shadow: inset 0 3px 5px rgba(0,0,0,.075), 0 1px 0 rgba(255,255,255,.1);
  }
}
@media (min-width: 768px) {
  .advertisement {
    position: absolute;
    top: 5px;
    right: 15px; /* 15px instead of 0 since box-sizing */
    padding: 15px !important;
    width: 300px !important;
  }
}
/* ----------------------------------
 * navbar
 * ---------------------------------- */
.navbar-custom {
    position: fixed;
    top: 0;
    left: 0;
    border: none;
    border-radius: 0;
    background-color: rgba(42, 110, 187, 1);
    width: 100%;
    z-index: 2000;
}
.navbar-custom .nav li a {
    display: block;
    color: #fff;
}
.navbar-custom .nav li a:focus,
.navbar-custom .nav li a:hover {
    color: #fff;
}
.navbar-custom .nav li a:active,
.navbar-custom .nav li a.current {
    background-color: #4387D5;
}
.navbar-custom .navbar-toggle {
    position: relative;
    background-color: #50c1e9;
    border-color: #50c1e9;
}
.navbar-custom .navbar-toggle:hover,
.navbar-custom .navbar-toggle:focus {
    background-color: #50c1e9;
}
.navbar-custom .navbar-toggle .icon-bar {
    background-color: rgba(255, 255, 255, .9);
}
.navbar-custom .navbar-brand {
   
}
.navbar-brand {
    padding: 5px 10px;
}

.navbar-custom .navbar-brand:hover,
.navbar-custom .navbar-brand:active {
    opacity: 1;
    filter:alpha(opacity=100);
}
.navbar-default .navbar-collapse {
    border-color: #e7e7e7;
}
/* ... */

